Refactor: FinApiRequestDto